# aoc

./: Cargo.toml
2020/src/: day2.rs  day3.rs  template.rs
2022/: Cargo.toml
2022/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  main.rs  template.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  main.rs  template.rs
