[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["James Little <littleguy23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.clap]
version = "3.0.0-beta.2"
default-features = false
features = ["std"]